--- a/tests/Jenkinsfile
+++ b/tests/Jenkinsfile
@@ -1,9 +1,10 @@
 pipeline {
   agent {
     node {
-      label 'windows'
+      label 'windows-2016'
     }
   }
+
   stages {
     stage('Run AWS template structure validation tests [Pester]') {
       steps {
