--- a/tests/Jenkinsfile
+++ b/tests/Jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
     stage('Run AWS template structure validation tests [Pester]') {
       steps {
         powershell "Install-Module -Name Pester -Force -SkipPublisherCheck"
-        s3Upload(bucket: 'Jenkins-${env.BUILD_ID}', includePathPattern: '**/*', workingDir : 'aws')
+        s3Upload(bucket: 'jenkins-temp-poc', includePathPattern: '**/*', workingDir : 'aws')
         script {
             response = powershell(script: 'Invoke-Pester -Script @{ Path = "tests/structure"; Parameters = @{ randomNumber = "1" }; }', returnStdout: true)
             echo "Response: ${response}"
