--- a/tests/Jenkinsfile
+++ b/tests/Jenkinsfile
@@ -8,9 +8,9 @@ pipeline {
     stage('Run AWS template structure validation tests [Pester]') {
       steps {
         powershell "Install-Module -Name Pester -Force -SkipPublisherCheck"
-        s3Upload(bucket: 'jenkins-temp-poc', includePathPattern: '**/*', workingDir : 'aws')
+        s3Upload(bucket: 'pester-tests', includePathPattern: '**/*', workingDir : 'aws')
         script {
-            response = powershell(script: 'Invoke-Pester -Script @{ Path = "tests/structure"; Parameters = @{ randomNumber = "1" }; }', returnStdout: true)
+            response = powershell(script: 'Invoke-Pester -Script @{ Path = "tests/structure"; }', returnStdout: true)
             echo "Response: ${response}"
         }
       }
