Remove pester installation

--- a/tests/Jenkinsfile
+++ b/tests/Jenkinsfile
@@ -10,7 +10,7 @@ pipeline {
         
         s3Upload(bucket: 'pester-tests', includePathPattern: '**/*', workingDir : 'aws')
         script {
-            powershell(script: 'Install-Module -Name Pester -Force -SkipPublisherCheck', returnStdout: true)
+            //powershell(script: 'Install-Module -Name Pester -Force -SkipPublisherCheck', returnStdout: true)
             response = powershell(script: 'Invoke-Pester "tests/structure"', returnStdout: true)
             echo "Response: ${response}"
         }
