--- a/tests/Jenkinsfile
+++ b/tests/Jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
       steps {
         s3Upload(bucket: 'pester-tests', includePathPattern: '**/*', workingDir : 'aws')
         script {
-            //powershell(script: 'Install-Module -Name Pester -Force -SkipPublisherCheck', returnStdout: true)
+            powershell(script: 'Start-Process powershell -Verb runAs -ArgumentList "& Install-Module -Name Pester -Force -SkipPublisherCheck"', returnStdout: true)
             response = powershell(script: 'Invoke-Pester "tests/structure"', returnStdout: true)
             echo "Response: ${response}"
         }
