--- a/tests/Jenkinsfile
+++ b/tests/Jenkinsfile
@@ -8,6 +8,7 @@ pipeline {
     stage('Assume role'){
       steps {
         script {
+          powershell(script: 'C:\ProgramData\Amazon\EC2-Windows\Launch\Scripts\InitializeInstance.ps1')
           iam = powershell(script: '(Invoke-WebRequest http://169.254.169.254/latest/meta-data/iam/security-credentials).Content', returnStdout: true)
           iamProfileInfo = powershell(script: 'ConvertFrom-Json (Invoke-WebRequest http://169.254.169.254/latest/meta-data/iam/security-credentials/${iam}).Content', returnStdout: true) 
           powershell(script: 'Set-AWSCredentials -AccessKey ${iamProfileInfo}.AccessKeyId -SecretKey ${iamProfileInfo}.SecretAccessKey -SessionToken ${iamProfileInfo}.Token')
