--- a/tests/Jenkinsfile
+++ b/tests/Jenkinsfile
@@ -15,7 +15,7 @@ pipeline {
           echo "${res}"
           iam = powershell(script: '(Invoke-WebRequest http://169.254.169.254/latest/meta-data/iam/security-credentials).Content', returnStdout: true)	
           echo "${iam}"
-          iamProfileInfo = powershell(script: 'ConvertFrom-Json (Invoke-WebRequest http://169.254.169.254/latest/meta-data/iam/security-credentials/${iam}).Content', returnStdout: true) 	
+          iamProfileInfo = powershell(script: '(Invoke-WebRequest http://169.254.169.254/latest/meta-data/iam/security-credentials/${iam}).Content', returnStdout: true) 	
           echo "${iamProfileInfo}"
           powershell(script: 'Set-AWSCredentials -AccessKey ${iamProfileInfo}.AccessKeyId -SecretKey ${iamProfileInfo}.SecretAccessKey -SessionToken ${iamProfileInfo}.Token')
         }
